<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#04101c"
    tools:context=".ui.HomeScreenActivity">

    <include
        android:id="@+id/base_toolbar"
        layout="@layout/base_material_toolbar" />

    <!--    <com.google.android.material.progressindicator.LinearProgressIndicator-->
    <!--        android:id="@+id/linearProgressBar"-->
    <!--        android:visibility="gone"-->
    <!--        android:indeterminate="true"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/base_toolbar">-->

    <!--    </com.google.android.material.progressindicator.LinearProgressIndicator>-->

    <include
        android:id="@+id/no_internet"
        layout="@layout/no_internet_screen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/base_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/base_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movies_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/popular_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/home_screen_popular_text"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/home_screen_all_popular_tv" />

            <TextView
                android:id="@+id/home_screen_all_popular_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="18dp"
                android:background="@drawable/circular_white_btn"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp"
                android:text="@string/all_popular_movies_txt"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popular_movies_horizontal_rv"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/home_screen_all_popular_tv"
                tools:itemCount="2"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/home_screen_popular_movie_section_item" />

            <TextView
                android:id="@+id/top_rated_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/home_screen_top_rated_text"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="@id/home_screen_all_top_rated_tv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/home_screen_all_top_rated_tv" />

            <TextView
                android:id="@+id/home_screen_all_top_rated_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="18dp"
                android:background="@drawable/circular_white_btn"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp"
                android:text="@string/all_popular_movies_txt"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/popular_movies_horizontal_rv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/top_rated_movies_horizontal_rv"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/home_screen_all_top_rated_tv"
                tools:itemCount="2"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/home_screen_top_rated_movies_section_item" />

            <TextView
                android:id="@+id/now_playing_movies_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/now_playing_movies_text"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_rated_movies_horizontal_rv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/now_playing_movies_horizontal_rv"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/now_playing_movies_tv"
                tools:itemCount="2"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/now_playing_movies_section_item" />

            <TextView
                android:id="@+id/upcoming_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/upcoming_movies_text"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="@id/home_screen_all_upcoming_tv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/home_screen_all_upcoming_tv" />

            <TextView
                android:id="@+id/home_screen_all_upcoming_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="18dp"
                android:background="@drawable/circular_white_btn"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp"
                android:text="@string/all_popular_movies_txt"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/now_playing_movies_horizontal_rv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/upcoming_movies_horizontal_rv"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="15dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/home_screen_all_upcoming_tv"
                tools:itemCount="2"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/home_screen_upcoming_movies_section_item" />

            <TextView
                android:id="@+id/trending_movies_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/trending_movies_text"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upcoming_movies_horizontal_rv" />

            <TextView
                android:id="@+id/trending_movies_day_week_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/day"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/trending_movies_day_week_switch"
                app:layout_constraintTop_toBottomOf="@id/upcoming_movies_horizontal_rv" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/trending_movies_day_week_switch"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="18dp"
                android:checked="false"
                android:textOff=""
                android:textOn=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upcoming_movies_horizontal_rv"
                app:showText="true" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trending_movies_horizontal_rv"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:visibility="visible"
                android:layout_margin="15dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trending_movies_day_week_switch"
                tools:itemCount="2"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/single_trending_movie_day_week" />

            <TextView
                android:id="@+id/trending_movies_daw_week_error_msg_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:drawablePadding="5dp"
                android:textColor="#BDB1B1"
                android:textSize="11sp"
                android:visibility="gone"
                app:drawableRightCompat="@drawable/error"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trending_movies_horizontal_rv"
                tools:text="Trending movies day wise details fetched" />

            <TextView
                android:id="@+id/trending_TV_shows_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="18dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/trending_tv_shows_text"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trending_movies_horizontal_rv" />

            <TextView
                android:id="@+id/trending_tv_shows_day_week_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/day"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/trending_TV_shows_day_week_switch"
                app:layout_constraintTop_toBottomOf="@id/trending_movies_horizontal_rv" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/trending_TV_shows_day_week_switch"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="18dp"
                android:checked="false"
                android:textOff=""
                android:textOn=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trending_movies_horizontal_rv"
                app:showText="true" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trending_TV_shows_horizontal_rv"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="15dp"
                android:visibility="visible"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trending_TV_shows_day_week_switch"
                tools:itemCount="2"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/single_trending_tv_shows_day_week" />

            <TextView
                android:id="@+id/trending_tv_shows_daw_week_error_msg_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:drawablePadding="5dp"
                android:textColor="#BDB1B1"
                android:textSize="11sp"
                android:visibility="gone"
                app:drawableRightCompat="@drawable/error"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trending_TV_shows_horizontal_rv"
                tools:text="Trending tv shows day wise details fetched" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
